# codeanon-website-v2

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  app.json  docker-compose.yml  docker_entry.sh  heroku.yml  manage.py  package.json  pyproject.toml
.github/workflows/: docker-publish.yml  main.yml
blog/: models.py
blog/migrations/: 0001_initial.py  0002_auto_20200906_1637.py  0002_auto_20201104_1031.py  0003_auto_20200906_1648.py  0004_auto_20200906_1649.py  0005_auto_20200906_1702.py  0006_auto_20200906_1705.py  0007_auto_20200906_1709.py  0008_auto_20200906_1713.py
blog/templates/blocks/: code_block.html
blog/templates/blog/: blog_index_page.html  blog_page.html
codeanon/: forms.py  urls.py  views.py  wsgi.py
codeanon/fixtures/: dump.json
codeanon/settings/: base.py  dev.py  production.py
codeanon/static/css/: codeanon.css
codeanon/static/js/: codeanon.js
codeanon/templates/: base.html  crispy_form.html  login.html  register.html
contrib/columns/: apps.py  blocks.py
contrib/opengraph/: apps.py  gen.py  models.py
contrib/wagtailmath/: apps.py  blocks.py  wagtail_hooks.py
home/: models.py
home/fixtures/: default.json
home/migrations/: 0003_auto_20200108_1911.py  0004_link_description.py  0005_auto_20200108_2107.py  0006_delete_link.py  0007_emailformpage_formfield.py  0008_formfield_clean_name.py  0009_auto_20200904_1714.py  0009_auto_20200906_1310.py  0010_auto_20200906_1349.py  0010_auto_20201103_1709.py  0010_auto_20201103_1939.py  0011_merge_20201104_1030.py  0012_auto_20201104_1031.py
home/templates/home/: article.html  (+7 more)
(+21 files in other folders)
