[tool.poetry]
name = "codeanon-website"
version = "0.1.0"
description = "Website of the CodeAnon organization."
authors = ["Nathan Graule <solarliner@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7,^3.8"
django = "^2.2"
wagtail = "^2.7"
django-crispy-forms = "^1.7"
django-crispy-bulma = "~0.2"
django-compressor = "^2.4"
django-sass-processor = "^0.8"
libsass = "^0.19"
gunicorn = "^20"
dj-database-url = "^0.5"
psycopg2-binary = "^2.8"
whitenoise = "^5.0.1"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "~2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
